# helioryn-compliance

./: .env  .gitignore  AGENTS.md  BUG_REPORT.md  CONTROL.md  DEFERRED_DECISIONS.md  Helioryn_Intelligence_Topics.md  ISSUES.md  LICENSE  README.md  SECURITY_AUDIT.md  SYSTEM.md  VISION.md  chatgpt-prompt.md  check_daemon.py  check_db.py  check_postproc.py  check_state.py  cli.py  com.helioryn.daemon.plist  config.py  connect.sh  design-doc.md  easy-hard-demo-questions.md  helioryn.toml  helioryn.toml.mac  pyproject.toml  sample_contradictions.py  seed_demo.py  start.sh  test_discovery.py  test_questions.py  verify_live.py
data/: companies.json  governments.json  investors.json  researchers.json
migrations/: 001_initial.sql  002_claims.sql  003_discovery.sql  004_observation.sql  005_entity.sql  006_relationship.sql  007_narrative.sql  008_ledger.sql  009_claim_topic.sql  010_search_query_category.sql  011_external_grounding.sql  012_admin_audit.sql
references/: cluade-sonet-4.6-verion-what-helioryn-should-be  copilot-what-it-thinks-helioryn-needs-to-have  google-gemini-what-helioryn-should-be  what is Helioryn
scripts/: ci.sh  cleanup_low_quality_claims.py  cleanup_news.sql  cleanup_news2.sql  nuke_and_rebuild.py  purge_aggregators.py  seed_gov_data.py
tests/: check_daemon.py  check_state.py  check_tables.py  sample_contradictions.py  test_confidence.py  test_contradiction.py  test_discovery.py  test_extract.py  test_hasher.py  test_ingest_pipeline.py  test_log.py  test_models.py  test_store_integration.py  test_store_stats.py  test_temporal.py  test_uncertainty.py  (+3 more)
(+70 files in other folders)
