# Copyright (c) 2026 Ravenkey LLC dba Helioryn. All rights reserved.
[project]
name = "helioryn-compliance"
version = "0.1.0"
description = "Grant compliance intelligence — monitor federal grants, regulations, and compliance requirements"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.10",
    "asyncpg>=0.30",
    "pydantic>=2.0",
    "tomli>=2.0",
    "schedule>=1.2",
    "textual>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
    "aiofiles>=24.1",
    "spacy>=3.7",
    "editdistance>=0.8",
    "pypdf>=6.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "sentence-transformers>=3.0",
]

[project.scripts]
helioryn = "helioryn.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helioryn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
